--- a/DKGK-VR/Packages/manifest.json
+++ b/DKGK-VR/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.learn.iet-framework": "4.0.3",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.universal": "17.0.3",
+    "com.unity.splines": "2.7.2",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.xr.hands": "1.5.0",
